Added java options setter file