@@ -1,25 +1,35 @@
 # Java opts setting files
+# This file should be used with caution ; be sure to understand the flags before using them !
+# No configuration is magic, no configuration is eternal.
 
-CERT_FOLDER="${pwd}"
-LOG_FOLDER="/var/log/application"
-
+# Platform :
+# - local is when running the application locally (dev machine)
+# - dev is when running the application on dev platforms (integration, ...)
+# - prod is when running the application in production
 PTF="local" # dev, prod
 
+# Activated profiles. Each profile is defined by a function.
 function profiles {
 	basic
 	ssl
-	tuning
 	debug
 	#profile
 	monitoring
+	tuning
 }
 
-# Note: ref
+# Variables
+CERT_FOLDER="${pwd}"
+LOG_FOLDER="/var/log/application"
+
+# Note: more info for -D options: 
 # http://www.mindspring.com/~mgrand/java-system-properties.htm
+
+# Other note: -XX:+UnlockExperimentalVMOptions
 
 
 function basic {
-	# Force server-mode VM
+	# Force server-mode VM (theoricaly already set by default on server-class machines)
 	add "-server"
 
 	# Basic memory configuration ; for more, see tuning()
@@ -27,10 +37,12 @@ function basic {
 	add -Xmx512m
 	#add -XX:MaxPermSize=256m
 
+	# Disable System.gc() calls.
+	add -XX:+DisableExplicitGC
+
 	# Network config
 	# http://docs.oracle.com/javase/7/docs/technotes/guides/net/properties.html
 	add -Djava.net.preferIPv4Stack=true
-
 }
 
 function ssl {
@@ -38,36 +50,28 @@ function ssl {
 	# http://docs.oracle.com/javase/7/docs/technotes/guides/security/jsse/JSSERefGuide.html
 	add -Djavax.net.ssl.keyStore=$CERT_FOLDER/keystore.p12
 	add -Djavax.net.ssl.keyStoreType=PKCS12
-	add -Djavax.net.ssl.keyStorePassword=coucou
+	add -Djavax.net.ssl.keyStorePassword=password # Caution: will be seen by any "ps aux"
 	add -Djavax.net.ssl.trustStore=$CERT_FOLDER/truststore.jks
 	add -Djavax.net.ssl.trustStoreType=JKS
-	add -Djavax.net.ssl.trustStorePassword=coucou
+	add -Djavax.net.ssl.trustStorePassword=password # Caution: will be seen by any "ps aux"
 	add -Djavax.net.debug=ssl,handshake
 	# Note: uncomment following to get more info (warn: force vm to exit)
 	#add -Djavax.net.debug=help
 }
 
-function tuning {
-	# Memory tuning
-	#add -XX:UseAdaptativeSizePolicy
-	#add -XX:NewSize=64m
-	#add -XX:MaxNewSize=256m
-	#add -XX:SurvivorRatio=2
-
-	# Activate CMS (low-pause collector)
-	add -XX:+UseParNewGC
-	add -XX:+UseConcMarkSweepGC
-	add -XX:+CMSParallelRemarkEnabled
-
-	# Other tuning
-	add -XX:+OptimizeStringConcat
-	add -XX:+UseCompressedStrings
-	add -XX:+UseCompressedOops #x64 only
-}
-
 function debug {
+	# Required for some of the next options
+	add -XX:+UnlockDiagnosticVMOptions
+
 	# Print flags
-	add -XX:+UnlockDiagnosticVMOptions -XX:+PrintFlagsFinal
+	add -XX:+PrintFlagsFinal
+
+	# See effect of internal string cache (at VM shutdown)
+	add -XX:+PrintStringTableStatistics
+
+	# Expert: Hotspot compiler main diagnosis functions
+	#add -XX:+PrintCompilation
+	#add -XX:+LogCompilation # Optional: -XX:LogFile=hotspot.log
 
 	# Sample JPDA settings for remote socket debugging
 	# Note: execute "java -agentlib:jdwp=help" for more options
@@ -84,18 +88,28 @@ function debug {
 
 function profile {
 	# Activate jmc profiler (JRE 7u45+)
-	add -XX:+UnlockCommercialFeatures -XX:+FlightRecorder
+	#add -XX:+UnlockCommercialFeatures -XX:+FlightRecorder
+
+	# Hprof help
+	#add -Xrunhprof:help
 }
 
 function monitoring {
 	# GC Log configuration	
 	case "$PTF" in
+	"local")
+		# For "local", don't externalize gc logs (put them in the console output)
+		add -verbose:gc -XX:+PrintGCTimeStamps
+		add -XX:+PrintGCDetails
+		add -XX:+PrintGCApplicationStoppedTime # Print GC pauses duration
+		add -XX:+PrintTenuringDistribution # Useful to detect premature promotion
 	"dev" | "prod")
 		add -Xloggc:$LOG_FOLDER/gc/gc.log
 		add -XX:+UseGCLogFileRotation
 		add -XX:NumberOfGCLogFiles=10
 		add -XX:GCLogFileSize=10M #X(K,M,G)
 		add -XX:+PrintGCDetails
+		add -XX:+PrintGCApplicationStoppedTime # Print GC pauses duration
 	;;
 	esac
 
@@ -129,13 +143,58 @@ function monitoring {
 	esac 
 }
 
+function tuning {
+	# @see http://www.techpaste.com/2012/02/22/java-command-line-options-jvm-performance-improvement/#more-3585
 
+	# Memory pools tuning
+	#add -Xmn256m # Note: same as setting -XX:NewSize=64m -XX:MaxNewSize=64m
+	#add -XX:NewSize=64m -XX:MaxNewSize=256m # Set either Xmn, or these two, but not all at the same time
+	#add -XX:SurvivorRatio=2
+	# With parallel collectors only, adapt survivor & eden size automatically :
+	#add -XX:UseAdaptativeSizePolicy # Note: use -XX:+PrintFlagsFinal to see if activated by default or not
+
+	# Large pages support. Note: must be activated in the running OS (if supported)
+	# Note bis: it can help to decrease swapping of Java app, as large pages are not swappable
+	#add -XX:+UseLargePages
+	#add -XX:LargePageSizeInBytes=<n>[g|m|k]
+
+	# GC collectors ; do either 1) (for throughput-constrained applications) or 2) (for latency-constrained applications)
+
+	# 1) Activate parallel collectors for better throughput
+	# add -XX:+UseParallelGC -XX:+UseParallelOldGC 
+
+	# 2) Activate CMS for a low-pause collector : Use ParNew for young gen and CMS for old gen
+	add -XX:+UseParNewGC -XX:+UseConcMarkSweepGC
+	add -XX:+CMSParallelRemarkEnabled
+	# The following options can be used when gc pauses length are a strong constraint
+	# Following 3 parameters are for setting pause goals for low pauses (but not guaranteed)
+	#add -XX:MaxGCPauseMillis=N # Max gc pause goal for parallel GC
+	#add -XX:GCTimeRatio=n # Max gc ratio goal (i.e. in business code / in gc) for parallel GC
+	#add -XX:GCPauseIntervalMillis=100 # Min gc pauses interval goal
+	# Allow the CMS gc to stop its concurrent phases to let the application run
+	# Generally not recommended for multicore systems or large Java heaps, but can help to reduce GC pauses length.
+	#add -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing
+
+	# Concerning strings
+	#add -XX:+UseStringCache # Note: use -XX:+PrintFlagsFinal to see if activated by default or not
+	#add -XX:StringTableSize=10m # Note: useful if UseStringCache is on. Use -XX:+PrintStringTableStatistics to tune it
+	#add -XX:+OptimizeStringConcat # Note: use -XX:+PrintFlagsFinal to see if activated by default or not
+	# Note: -XX:+UseCompressedStrings was removed in jre 7+ (when activated, decreases memory usage but increases CPU usage)
+
+	# Other tuning
+	#add -XX:+AggressiveOpts # meta-flag for experimental performance tips ; changes for each version
+	#add -XX:+UseCompressedOops # x64 only ; Note: use -XX:+PrintFlagsFinal to see if activated by default or not
+	#add -XX:+UseBiasedLocking # Can improve performance if there is significant amounts of uncontended synchronization
+}
+
+
+
+#### End of configuration ####
 
 # Helper Functions
 function add {
   JAVA_OPTS="$JAVA_OPTS ${@}"
 }
-
 
 # Reset java options
 JAVA_OPTS=""
